# whisperplot2

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  index.html
src/: dataset.rs  lib.rs  main.rs  shader.wgsl  view.rs
