
[package]
name = "whisperplot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
winit = "0.29"
env_logger = "0.11"
log = "0.4"
wgpu = "0.19"
cfg-if = "1"
pollster = "0.3"
egui_demo_lib = "0.26"
egui = "0.26"
egui-wgpu = "0.26"
csv = "1.3.0"
bytemuck = "1.15.0"
glyphon = "0.5.0"

# the other regular dependencies...

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.19", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}



