
[package]
name = "whisperplot"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
winit = "0.30"
env_logger = "0.11"
log = "0.4"
wgpu = "27.0.1"
cfg-if = "1"
pollster = "0.4"
egui_demo_lib = "0.33"
egui = "0.33"
egui-wgpu = "0.33"
csv = "1.4.0"
bytemuck = "1.24.0"
glyphon = "0.9.0"

[patch.crates-io]
glyphon = { git = "https://github.com/grovesNL/glyphon" }
# the other regular dependencies...

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.19", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}



